--- a/index.html
+++ b/index.html
@@ -6,28 +6,182 @@
     <title>Penguin Fashion</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="logo" src="images/logo.png" alt="Penguin Fashion Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Product</a>
-                    <a class="nav-link" href="#">About Us</a>
-                    <a class="nav-link" href="#">Contact Us</a>
+<body>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img class="logo" src="images/logo.png" alt="Penguin Fashion Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav fw-bold">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" href="#women's-jacket">Women's Jcket</a>
+                        <a class="nav-link active" href="#men's-jacket">Men's Jcket</a>
+                        <a class="nav-link active" href="#">About Us</a>
+                        <a class="nav-link active" href="#">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="row d-flex align-items-center p-5">
+                    <div class="col-md-7">
+                        <h2 class="text-uppercase fw-bolder"><span class="banner-text">Be the Penguins</span><br>of Winter</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dolorem modi ipsam sint molestias.</p>
+                        <button type="button" class="btn-color bg-gradient text-white p-1"><img class="m-1" src="images/shopping-cart 1.png">BUY NOW
+                        </button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner.png" class="d-block w-100" alt="TV">
+                    </div>
                 </div>
             </div>
         </div>
-    </nav>
-</header>
-<body>
-  
+    </header>
+    <main class="container">
+        <section id="women's-jacket" class="container mt-5">
+            <h3 class="fw-bold">WOMEN'S JACKET</h3>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card card-border h-100 shadow">
+                        <img src="images/women-jacket01.png" class="card-img-top women" alt="women jacket">
+                        <div class="card-body">
+                            <h5 class="card-title">Women Jacket-01</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aut labore ipsum enim quasi facilis!</p>
+                        </div>
+                        <div class="card-footer footer-design btn-color">
+                            <h5>$234</h5>
+                            <button type="button" class="btn-color bg-gradient text-white p-1"><img class="m-1" src="images/shopping-cart 1.png">BUY NOW
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-border h-100 shadow">
+                        <img src="images/women-jacket02.png" class="card-img-top women" alt="women jacket">
+                        <div class="card-body">
+                            <h5 class="card-title">Women Jacket-02</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aut labore ipsum enim quasi facilis!</p>
+                        </div>
+                        <div class="card-footer footer-design btn-color">
+                            <h5>$234</h5>
+                            <button type="button" class="btn-color bg-gradient text-white p-1"><img class="m-1" src="images/shopping-cart 1.png">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-border h-100 shadow">
+                        <img src="images/women-jacket03.png" class="card-img-top women" alt="women jacket">
+                        <div class="card-body">
+                            <h5 class="card-title">Women Jacket-03</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aut labore ipsum enim quasi facilis!
+                            </p>
+                        </div>
+                        <div class="card-footer footer-design btn-color">
+                            <h5>$234</h5>
+                            <button type="button" class="btn-color bg-gradient text-white p-1"><img class="m-1" src="images/shopping-cart 1.png">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
+            <section id="men's-jacket" class="mt-5">
+                <h3 class="fw-bold">MEN'S JACKET</h3>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card card-border h-100 shadow">
+                            <img src="images/men-jacket-01.png" class="card-img-top women" alt="men jacket">
+                            <div class="card-body">
+                                <h5 class="card-title">Men's Jacket-01</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aut labore ipsum enim quasi facilis!</p>
+                            </div>
+                            <div class="card-footer footer-design btn-color">
+                                <h5>$234</h5>
+                                <button type="button" class="btn-color bg-gradient text-white p-1"><img class="m-1" src="images/shopping-cart 1.png">BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-border h-100 shadow">
+                            <img src="images/men-jacket-02.png" class="card-img-top women" alt="men jacket">
+                            <div class="card-body">
+                                <h5 class="card-title">Men's Jacket-02</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aut labore ipsum enim quasi facilis!</p>
+                            </div>
+                            <div class="card-footer footer-design btn-color">
+                                <h5>$234</h5>
+                                <button type="button" class="btn-color bg-gradient text-white p-1"><img class="m-1" src="images/shopping-cart 1.png">BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card card-border h-100 shadow">
+                            <img src="images/men-jacket-03.png" class="card-img-top women" alt="men jacket">
+                            <div class="card-body">
+                                <h5 class="card-title">Men's Jacket-03</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aut labore ipsum enim quasi facilis!</p>
+                            </div>
+                            <div class="card-footer footer-design btn-color">
+                                <h5>$234</h5>
+                                <button type="button" class="btn-color bg-gradient text-white p-1"><img class="m-1" src="images/shopping-cart 1.png">BUY NOW/button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section class="mt-5">
+            <div class="shopping d-flex">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0 card-border mt-5 shadow">
+                        <div class="col-md-4">
+                            <img class="p-2" src="images/perfect-fit.png" alt="shop">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title p-1">Find the Perfect Fit</h5>
+                                <p class="card-text">Everybody is different, which is why we offer styles for every body</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row g-0 card-border mt-5 shadow">
+                        <div class="col-md-4">
+                            <img src="images/exchange.png" alt="exchange">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Free Exchanges</h5>
+                                <p class="card-text">One of the many reasons you can shop with peace of mind.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row g-0 card-border mt-5 shadow">
+                        <div class="col-md-4">
+                            <img src="images/seller.png" alt="call seller">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Contact Our Seller</h5>
+                                <p class="card-text">They are here to help you. That's quite -literally what we pay them for.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/online-shopping.png" alt="online shopping">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="mt-5 text-center">
+        <small>©2021 All rights reserved by Penguin Fashion.</small>
+    </footer>
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
